Fix portofolio content alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,10 +74,12 @@
     max-width: 100%;
     width: 20rem;
     filter: grayscale(100%);
+    
 }
 
 .col-md-6 {
     text-align: center;
+    padding-left: 0rem;
 }
 
 .project-size {
@@ -114,6 +116,7 @@
 }
 
 .project-block {
+    justify-content: center;
     padding-top: 6rem;
     height: auto;
     margin-left: 2rem;
